# runnable_family

./: README.md  pyproject.toml
.github/workflows/: add-tag-on-pull-request-by-bot.yaml  check-and-fix-version-on-push-tags.yaml  code-style-check-workflow-call.yaml  on-release.yaml  pytest-workflow-call.yaml  static-type-check-workflow-call.yaml  tests-on-schedule.yaml  validate-version-workflow-call.yaml
examples/: basic-examples.ipynb  setup.sh
runnable_family/: __init__.py  basic.py  gacha.py  lambda_family.py  loopback.py  operator.py  print_family.py  random.py  runnable_diff.py  self_consistent.py  self_refine.py  self_translate.py  standard.py
tests/: test_basic.py  test_gacha.py  test_lambda_family.py  test_loopback.py  test_print_family.py  test_random.py  test_runnable_diff.py  test_self_consistent.py  test_self_refine.py  test_self_translate.py  test_standard.py
