[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["runnable_family"]

[project]
name = "runnable_family"
description = "A python library implementing a family of Runnables in langchain"
dynamic = ["version"]
readme = "README.md"
dependencies = ["grandalf >= 0.8", "langchain >= 0.1.13", "langgraph>=0.0.32"]
requires-python = ">=3.10"
authors = [{ name = "hmasdev" }]
maintainers = [{ name = "hmasdev" }]
license = { file = "LICENSE" }
keywords = ["langchain", "runnable"]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "autopep8>=2.1.0",
    "flake8>=7.0.0",
    "httpx>=0.26.0",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
openai = ["langchain-openai>=0.1.1", "python-dotenv>=1.0.0"]

[project.urls]
Repository = "https://github.com/hmasdev/runnable_family"

[tool.setuptools.dynamic]
version = { attr = "runnable_family.__version__" }

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--cov=runnable_family --cov-report=term-missing"
markers = ["integration: mark a test as an integration test"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
